# webinar-vibe-coding-rag

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  example.env  gunicorn.conf.py  pyproject.toml
.data/: mcp-server-qdrant-knowledge-base.snapshot
.scripts/: run-qdrant.sh
app/: main.py
app/api/: router.py  video.py
app/models/: video.py
app/services/: qdrant_service.py  video_service.py
app/static/css/: style.css
app/static/js/: index.js  main.js  video.js
app/templates/: base.html  index.html  video.html
