[tool.poetry]
name = "webinar-vibe-coding-rag"
version = "0.1.0"
description = "An attempt to live code a working Retrieval Augmented Generation app with AI coding tools"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.6.0+cpu", source = "pytorch-cpu"}
sentence-transformers = "^3.4.1"
qdrant-client = "^1.13.3"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
