[tool.poetry]
name = "webinar-vibe-coding-rag"
version = "0.1.0"
description = "An attempt to live code a working Retrieval Augmented Generation app with AI coding tools"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.14"
torch = {version = "^2.6.0+cpu", source = "pytorch-cpu"}
sentence-transformers = "^3.4.1"
qdrant-client = "^1.13.3"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
gunicorn = "^23.0.0"
jinja2 = "^3.1.6"
youtube-transcript-api = "^1.0.2"
pytube = "^15.0.0"
yt-dlp = "^2025.2.19"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
